--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -4,6 +4,7 @@
     /* background-color: grey; */
     background-image: url(../../img/pinkFlower.jpeg);
     color: white;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .i-left{
@@ -28,6 +29,7 @@
 .i-intro{
     font-size: 30px;
     font-weight: 300;
+    
 }
 
 .i-name{
@@ -62,11 +64,3 @@
     align-items: center;
 } */ 
 
-
-
-.i-img {
-    width: 100%;
-    height: 100%;
-    object-fit: scale-down;
-    border-radius: 50% solid white;
-}
