--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -1,6 +1,6 @@
 .p {
     width: 30%;
-    height: 150px;
+    height: 40vh;
     margin: 20px 10px;
     border: 2px solid rgb(243, 242, 242);
     border-radius: 10px 10px 0 0;
@@ -12,6 +12,8 @@
     background-color: rgb(243, 242, 242);
     display: flex;
     align-items: center;
+    position: sticky;
+    z-index: 2;
 }
 
 .p-circle {
@@ -24,4 +26,13 @@
 
 .p-img{
     width: 100%;
+    transition: all 10s ease;
+}
+
+a {
+    width: 100%;
+}
+
+.p:hover .p-img{
+    transform: translateY(-100%);
 }
