--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -34,3 +34,37 @@ p {
     height: 70vh;
     border-radius: 30px;
 } */
+
+
+@media screen and (max-width: 480px) {
+    .a{
+        /* height: 100%; */
+        display: block;
+        margin-top: -23px;
+        /* flex-direction: column; */
+        /* text-align: center; */
+    }
+
+    .a-title{
+        padding-top: 60px;
+    }
+
+    .a-desc{
+        font-size: 15px;
+    }
+
+    .a-button{
+        padding: 5px 0 15px 0;
+    }
+
+    /* .a-card{
+        height: 30vh;
+    } */
+
+    .a-Img {
+        height: 200px;
+        /* padding-bottom: 20px; */
+    }
+
+    
+}
