--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -66,3 +66,18 @@ button {
     font-weight: 500;
     cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+    .c-wrapper{
+        display: block;
+    }
+
+    .c-title{
+        font-size: 30px;
+        padding: 30px 0 0 80px;
+    }    
+
+    .c-info {
+        margin: -20px 0;
+    }
+}
