--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -36,3 +36,10 @@ a {
 .p:hover .p-img{
     transform: translateY(-100%);
 }
+
+@media screen and (max-width:480px) {
+    .p{
+        width: 40%;
+        height: 110px;
+    }
+}
