--- a/src/components/PortfolioList/portfolioList.css
+++ b/src/components/PortfolioList/portfolioList.css
@@ -25,3 +25,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media screen and (max-width:480px) {
+    .pl{
+        padding: 10px;
+    }
+}
