--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -38,7 +38,7 @@ p {
 
 @media screen and (max-width: 480px) {
     .a{
-        /* height: 100%; */
+        height: 100%;
         display: block;
         margin-top: -23px;
         /* flex-direction: column; */
@@ -46,7 +46,7 @@ p {
     }
 
     .a-title{
-        padding-top: 60px;
+        padding-top: 20px;
     }
 
     .a-desc{
@@ -63,7 +63,7 @@ p {
 
     .a-Img {
         height: 200px;
-        /* padding-bottom: 20px; */
+        padding-bottom: 20px;
     }
 
     
