--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,6 +1,7 @@
 .c {
     position: block;
-    background: bisque;
+    /* background: rgba(0,0,0,0.2); */
+    /* background: rgba(24,24,27,0.8); */
     width: 100%;
 }
 
