--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -75,10 +75,24 @@ button {
 
     .c-title{
         font-size: 30px;
-        padding: 30px 0 0 80px;
+        padding: 30px 0 0 110px;
     }    
 
     .c-info {
-        margin: -20px 0;
+        margin: -25px -40px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .c-wrapper{
+        display: block;
+    }
+
+    .c-title{
+        padding: 30px 0 0 220px;
+    }    
+
+    .c-info {
+        margin: -25px -300px;
     }
 }
