--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -40,3 +40,21 @@ a {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+@media screen and (max-width:480px) {
+    .n{
+        height: 15%;
+    }
+
+    .n-right ul li a {
+        font-size: 10px;
+        margin-left: -10px;
+    }
+}
+
+@media screen and (max-width:900px) {
+
+    .n-right ul li a {
+        /* font-size: 10px; */
+        margin-right: 40px;
+    }
+}
