--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -94,7 +94,8 @@ ul{
 
     .a-Img {
         height: 200px;
-        padding-bottom: 20px;
+        padding: 0 0 20px 45px;
+        /* padding-bottom: 20px; */
     }
 
     
