--- a/src/components/PortfolioList/portfolioList.css
+++ b/src/components/PortfolioList/portfolioList.css
@@ -28,8 +28,8 @@
 
 @media screen and (max-width:480px) {
     .pl{
-        padding: 0px;
-        /* margin: -22px; */
+        padding: 10px;
+        margin: -10px;
     }
 }
 
